syntax = "proto3";

package intrvproto;

import "user.proto";

option go_package = "github.com/RafalSalwa/interview-app-srv/intrvproto";

service UserService {
rpc GetMe(GetUserRequest) returns (UserResponse) {}
}
